--- a/index.html
+++ b/index.html
@@ -345,6 +345,15 @@
                                         <div class="carousel-item">
                                             <img src="./img/e8.jpeg" class="d-block" alt="elefantitos2">
                                         </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/e9.jpeg" class="d-block" alt="elefantitos2">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/e10.jpeg" class="d-block" alt="elefantitos3">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/e11.jpeg" class="d-block" alt="eleantita1">
+                                        </div>
 
                                     </div>
                                     <button class="carousel-control-prev" type="button"
@@ -401,6 +410,24 @@
                                         </div>
                                         <div class="carousel-item">
                                             <img src="./img/jirafita11.jpeg" class="d-block" alt="jirafita">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/jirafita12.jpeg" class="d-block" alt="jirafita">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/jirafitas13.jpeg" class="d-block" alt="jirafita">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/jirafita14.jpeg" class="d-block" alt="jirafita">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/jirafita15.jpeg" class="d-block" alt="jirafita">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/jirafita16.jpeg" class="d-block" alt="jirafita">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/jirafita17.jpeg" class="d-block" alt="jirafita">
                                         </div>
 
                                     </div>
@@ -472,6 +499,13 @@
                                         <div class="carousel-item">
                                             <img src="./img/gatitos16.jpeg" class="d-block" alt="">
                                         </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/gatitos17.jpeg" class="d-block" alt="">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/gatitos18.jpeg" class="d-block" alt="">
+                                        </div>
+
                                     </div>
                                     <button class="carousel-control-prev" type="button"
                                         data-bs-target="#carouselGatitos" data-bs-slide="prev">
@@ -549,6 +583,12 @@
                                         </div>
                                         <div class="carousel-item">
                                             <img src="./img/zorritos17.jpeg" class="d-block" alt="zorrito">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/zorritos18.jpeg" class="d-block" alt="zorrito">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/zorritos19.jpeg" class="d-block" alt="zorrito">
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button"
@@ -663,6 +703,9 @@
                                         </div>
                                         <div class="carousel-item">
                                             <img src="./img/conejos17.jpeg" class="d-block" alt="">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/conejos18.jpeg" class="d-block" alt="">
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button"
