--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     costurera de
                     alma. Una de mis mayores pasiones desde pequeña es la fabricación de muñecos. Disfruto creando y
                     diseñando
-                    cada uno de los proyectos, que realizo con mucho amor
+                    cada uno de los proyectos. Los realizo con mucho amor
                     pensando en cada detalle. Me dedico mayormente a la creación de muñecos de apego.</p>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-12">
@@ -130,7 +130,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$4.100</p>
+                            <p class="lead precio">$5.100</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalConejita">
                                 <span>Ver más</span>
                             </button>
@@ -148,7 +148,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$4.500</p>
+                            <p class="lead precio">$5.500</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalElefantita">
                                 <span>Ver más</span>
                             </button>
@@ -166,7 +166,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$5.000</p>
+                            <p class="lead precio">$6.000</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalJirafitas">
                                 <span>Ver más</span>
                             </button>
@@ -185,7 +185,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$3.900</p>
+                            <p class="lead precio">$4.900</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalGatitos">
                                 <span>Ver más</span>
                             </button>
@@ -204,7 +204,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$3.900</p>
+                            <p class="lead precio">$4.900</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalZorritos">
                                 <span>Ver más</span>
                             </button>
@@ -222,7 +222,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$3.500</p>
+                            <p class="lead precio">$4.500</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalConejitos">
                                 <span>Ver más</span>
                             </button>
@@ -241,7 +241,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$4.000</p>
+                            <p class="lead precio">$5.000</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalMonita">
                                 <span>Ver más</span>
                             </button>
@@ -476,16 +476,19 @@
                                             <img src="./img/gatitos7.jpeg" class="d-block" alt="gatitos">
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="./img/gatitos8.jpeg" class="d-block" alt="gatitos">
+                                            <img src="./img/gatitos19.jpeg" class="d-block" alt="gatitos">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/gatitos20.jpeg" class="d-block" alt="gatitos">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/gatitos21.jpeg" class="d-block" alt="gatitos">
                                         </div>
                                         <div class="carousel-item">
                                             <img src="./img/gatitos10.jpeg" class="d-block" alt="gatitos">
                                         </div>
                                         <div class="carousel-item">
                                             <img src="./img/gatitos11.jpeg" class="d-block" alt="gatitos">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="./img/gatitos12.jpeg" class="d-block" alt="gatitos">
                                         </div>
                                         <div class="carousel-item">
                                             <img src="./img/gatitos13.jpeg" class="d-block" alt="">
@@ -763,7 +766,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$3.500</p>
+                            <p class="lead precio">$5.500</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalMuñeca">
                                 <span>Ver más</span>
                             </button>
@@ -780,7 +783,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$3.500</p>
+                            <p class="lead precio">$6.000</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalCoraline">
                                 <span>Ver más</span>
                             </button>
@@ -883,6 +886,15 @@
                                         <div class="carousel-item">
                                             <img src="./img/carolaine5.jpeg" alt="caroline3" class="d-block">
                                         </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/carolaine6.jpeg" alt="caroline3" class="d-block">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/carolaine7.jpeg" alt="caroline2" class="d-block">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/carolaine8.jpeg" alt="caroline3" class="d-block">
+                                        </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button"
                                         data-bs-target="#carouselCoraline" data-bs-slide="prev">
@@ -940,7 +952,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$3.500</p>
+                            <p class="lead precio">$4.500</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalRatoncitos">
                                 <span>Ver más</span>
                             </button>
@@ -959,7 +971,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$3.500</p>
+                            <p class="lead precio">$4.500</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalHaditas">
                                 <span>Ver más</span>
                             </button>
