--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$5.100</p>
+                            <p class="lead precio">$7.100</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalConejita">
                                 <span>Ver más</span>
                             </button>
@@ -148,7 +148,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$5.500</p>
+                            <p class="lead precio">$7.500</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalElefantita">
                                 <span>Ver más</span>
                             </button>
@@ -166,7 +166,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$6.000</p>
+                            <p class="lead precio">$8.000</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalJirafitas">
                                 <span>Ver más</span>
                             </button>
@@ -180,12 +180,12 @@
                             <p class="bold"> Gatitos siameses de apego</p>
                             <p class="card-text">Estos tiernos animalitos de apego están pensados para los más pequeños
                                 de la familia, prestando especial atención a cada detalle.Son lavables (preferentemente
-                                a mano)❤️ sus detalles están bordados a mano y su ropita es desmontable.Miden 35cm de
+                                a mano) sus detalles están bordados a mano y su ropita es desmontable.Miden 35cm de
                                 largo y son súper livianos. Envíos a toda Argentina.</p>
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$4.900</p>
+                            <p class="lead precio">$6.900</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalGatitos">
                                 <span>Ver más</span>
                             </button>
@@ -200,11 +200,11 @@
                             <p class="card-text">Estos tiernos animalitos de apego están pensados para los más pequeños
                                 de la familia, prestando especial atención a cada detalle. Detalles bordados a mano y
                                 ropita desmontable.Lavables (preferentemente
-                                a mano)❤️.Miden 35cm de largo y son súper livianos. Envíos a toda Argentina.</p>
+                                a mano).Miden 35cm de largo y son súper livianos. Envíos a toda Argentina.</p>
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$4.900</p>
+                            <p class="lead precio">$6.900</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalZorritos">
                                 <span>Ver más</span>
                             </button>
@@ -218,11 +218,11 @@
                             <p class="bold">Conejitos y conejitas de apego</p>
                             <p class="card-text">Estos tiernos animalitos de apego están totalmente pensados para los
                                 más pequeños de la familia, detalles bordados a mano, ropita desmontable y telas súper
-                                suavecitas❤️ Miden 35cm de largo y son súper livianos. Envíos a toda Argentina.</p>
+                                suavecitas. Miden 35cm de largo y son súper livianos. Envíos a toda Argentina.</p>
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$4.500</p>
+                            <p class="lead precio">$6.500</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalConejitos">
                                 <span>Ver más</span>
                             </button>
@@ -241,8 +241,30 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$5.000</p>
+                            <p class="lead precio">$7.000</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalMonita">
+                                <span>Ver más</span>
+                            </button>
+                        </div>
+                    </div>
+                </article>
+                <article class="col-md-6 col-lg-4 col-xxl-3" id="osito">
+                    <div class="card text-center bg-light text-dark h-100 ">
+                        <img class="img-card" src="./img/osito1.jpeg" alt="osito">
+                        <div class="card-body">
+                            <p class="bold">Osita y osito de apego</p>
+                            <p class="card-text">
+                                Aptos para bebes, lavables, súper livianitos.
+                                Detalles bordados a mano.
+                                Ropita desmontable.
+                                Compañeros de aventuras y piyamadas.
+                                Miden 36cm de largo, realizado en tusor de algodón.
+                                La ropita puede variar</p>
+                            <p class="card-text">El costo del envío no esta incluido en el precio.
+                                <hr>
+                            </p>
+                            <p class="lead precio">$7.000</p>
+                            <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalOsito">
                                 <span>Ver más</span>
                             </button>
                         </div>
@@ -727,6 +749,51 @@
                         </div>
                     </div>
                 </article>
+                <article class="modal" id="modalOsito" tabindex="-1">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div id="carouselOsito" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img src="./img/osito2.jpeg" class="d-block" alt="osito">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/osito3.jpeg" class="d-block" alt="medias2">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/osito4.jpeg" class="d-block" alt="medias3">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/osito5.jpeg" class="d-block" alt="medias3">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/osito6.jpeg" class="d-block" alt="medias3">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="./img/osito7.jpeg" class="d-block" alt="medias3">
+                                        </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselOsito"
+                                        data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Anterior</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselOsito"
+                                        data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Siguiente</span>
+                                    </button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </article>
             </section>
 
         </main>
@@ -766,7 +833,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$5.500</p>
+                            <p class="lead precio">$7.500</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalMuñeca">
                                 <span>Ver más</span>
                             </button>
@@ -783,7 +850,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$6.000</p>
+                            <p class="lead precio">$8.000</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalCoraline">
                                 <span>Ver más</span>
                             </button>
@@ -952,7 +1019,7 @@
                             <p class="card-text">El costo del envío no esta incluido en el precio.
                                 <hr>
                             </p>
-                            <p class="lead precio">$4.500</p>
+                            <p class="lead precio">$6.500</p>
                             <button class="button-card " data-bs-toggle="modal" data-bs-target="#modalRatoncitos">
                                 <span>Ver más</span>
                             </button>
